--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-linkedin-login-oauth2": "^1.0.9",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
