--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-google-login": "^5.2.2",
     "react-linkedin-login-oauth2": "^1.0.9",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.13.9",
+    "react-toastify": "^7.0.4",
     "reactjs-popup": "^2.0.4",
     "socket.io-client": "^4.1.1"
   },
